Fix svg not showing up on mobile

--- a/_harp/public/main.less
+++ b/_harp/public/main.less
@@ -115,7 +115,7 @@ body {
 				display: inline;
 				float:left;
 				margin-right: 10px;
-				background-color: transparent;;
+				background-color: transparent;
 				position: relative;
 				top: -5px;
 				overflow: visible;
@@ -192,7 +192,10 @@ body {
       .navbar-brand{
         color: #5c0165;
 				.purple-rose{
-					background-color: #5c0165;
+					color: #5c0165;
+					& path{
+						fill:#5c0165;
+					}
 				}
         &:focus, &:hover{
 
